--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <meta charset="utf-8">
     <head>
-        <img src="mar.jpg" height="50%" width="100%"></>
+        <img src="mar.jpg" height="600px" width="900px">
+
+<a href='https://br.freepik.com/fotos/agua'>br.freepik.com</a>
           <h1 style="color:blue;" align="center">Meu primeiro projeto</h1>
-          <img src="surf.jpg" height="50%" width="100%">
     </head>
     <body style="background-color:orange;">
         <h2 style="color:blue;" align="right">Pagina Única</h2>
